# yamlcli

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  release_template.md
.github/repository-metadata/: gh-repo.yml
.github/repository_metadata/: gh-repo.yml  label_master.yml
.github/workflows/: label_generator.yml  post-pull-request.yml
docs/: BRANCH_STRATEGY.md  VERSIONING_POLICY.md
docs/lintrules/: markdownlint.md
src/: yamlcli.py
src/yamlcli/: cli.py  yamlcli_core.py
tests/: __init__.py  test_coremodule.py  test_yamlcli.py
