[project]
name = "yamlcli"
version = "0.1.0"
description = "Convert YAML files to JSON and vice versa"
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[project.entry-points.console_scripts]
yamlcli = "yamlcli:main"


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
tool.uv.package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0"
]
